@@ -309,6 +309,11 @@ options are recognized:
     Set a "class" attribute value on the figure element.  See the
     class_ directive below.
 
+``align`` : "left", "center", or "right"
+    The horizontal alignment of the figure, allowing the image to
+    float and have the text flow around it.  The specific behavior
+    depends upon the browser or rendering software used.
+
 .. [#PIL] `Python Imaging Library`_.
 
 .. _Python Imaging Library: http://www.pythonware.com/products/pil/
