@@ -546,7 +546,7 @@ document (a document-wide <a class="reference" href="#table-of-contents">table o
 <p>An image directive (also clickable -- a hyperlink reference):</p>
 <div class="image class1 class2 image-reference"><a class="reference" href="#directives"><img alt="../../../docs/user/rst/images/title.png" class="class1 class2" src="../../../docs/user/rst/images/title.png" /></a></div>
 <p>A figure directive:</p>
-<div class="figclass1 figclass2 figure">
+<div align="left" class="figclass1 figclass2 figure">
 <div class="image class1 class2"><img alt="reStructuredText, the markup syntax" class="class1 class2" src="../../../docs/user/rst/images/title.png" /></div>
 <p class="caption">A figure is an image with a caption and/or a legend:</p>
 <div class="legend">
